--- a/src/main/webapp/Departement.xhtml
+++ b/src/main/webapp/Departement.xhtml
@@ -6,12 +6,13 @@ and open the template in the editor.
 -->
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:h="http://java.sun.com/jsf/html"
       xmlns:ui="http://java.sun.com/jsf/facelets">
-    <head>
-        <title>TODO supply a title</title>
+    <h:head>
+        <title>Application de gestion du personnel des services déconcentrés du MINESEC EXTREME NORD </title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
-    <body>
+    </h:head>
+    <h:body>
         <ui:include src="TemplateDepartement.xhtml"/>
-    </body>
+    </h:body>
 </html>
