--- a/src/main/webapp/TemplatePoste.xhtml
+++ b/src/main/webapp/TemplatePoste.xhtml
@@ -58,7 +58,7 @@ and open the template in the editor.
             <h:form id='tableForm'>
 
                 <p:contextMenu for="table">  
-                    <p:menuitem value="New"  update=":formAjouter:panelAjouter" oncomplete="PF('dlg').show()" /> 
+                    <p:menuitem value="New" actionListener="#{posteBean.initPost()}"  update=":formAjouter:panelAjouter" oncomplete="PF('dlg').show()" /> 
                     <p:menuitem value="Update"  update=":formModifier:panelGModifier" oncomplete="PF('dl').show()"/>  
                 </p:contextMenu>  
                 <p:dataTable  value="#{posteBean.findAllPoste()}" var="item" paginator="true" rows="5" paginatorTemplate=" {CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown} " id="table" rowsPerPageTemplate="5,10,15" selectionMode="single" selection="#{posteBean.poste}" rowKey="#{item.id}">
